Spacing correction on Articles page on desktop

--- a/src/styles/articles.styl
+++ b/src/styles/articles.styl
@@ -5,21 +5,22 @@
 #articles
   width 80%
   margin 0 auto
+  .column
+    margin 1.25rem 0
   h3
     color #000000
-    margin 0 0 1em 0
-  
+    margin 0 0 1.25rem 0
   p
-    line-height 2em
+    line-height 2rem
     
 @media only screen and (min-width: 1000px) 
   #articles
     .row.main
-      padding 4em
+      padding 4rem
       h3
-        padding 1em 0
-        font-size 2.4em
+        padding 1rem 0
+        font-size 2.4rem
         font-weight 300
       p
-        font-size 1.4em
-        line-height 2.1em
+        font-size 1.4rem
+        line-height 2.1rem
